fixed overflow and changed video

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body{
     background-image: url(/img/food.jpg);
     background-size: 100% 100%;
-    height: 100vh;   
+    height: 100vh; 
 }
 /* top menu */
 .top-menu{
@@ -40,7 +40,7 @@ button:hover{
 /* video toggle button */
 
 .video-btn{
-    position: fixed;
+    position: relative;
     left: 0;
     background-color: var(--back-colour);
     color: white;
@@ -77,19 +77,23 @@ button:hover{
 
 .open-video{
     display: block;
+    position: absolute;
 }
 h1{
     color: white;
 }
+h2{
+    color: white;
+}
+
 .video{
-    width: 30%;
-    border-radius: 20px;
+    width: 20%;
+    border-radius: 100px;
 }
 .controller{
-    position: fixed;
-    left: 110px;
+    position: relative;
     background-color:var(--back-colour);
-    width: 25%;
+    width: 20%;
     border-radius: 20px;
     padding: 10px;
     margin-top: 20px;
@@ -134,7 +138,7 @@ footer{
     padding-right: 40px;
     padding-bottom: 40px;
 }
-/* movies to watch */
+/* shopping list */
 .todo-body{
     position: absolute;
     right: 100px;
@@ -159,7 +163,7 @@ form input, form button{
     padding: 3px;
     background-color: white;
     cursor: pointer;
-    border: solid 2px white;
+    border: solid 1px white;
 }
 form input{
     background-color: var(--back-colour);
@@ -231,12 +235,14 @@ form button:hover{
 
 /* code for food container */
 .food-container{
+    position: absolute;
+    top: 0;
+    top: 80px;
+    left: 700px;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: center;
 }
 .submit-btn{
     width: 25px;
@@ -248,6 +254,9 @@ form button:hover{
     cursor: pointer;
     border: none;
 }
+.submit-btn:hover{
+    transform: scale(1.6);
+}
 
 
 h3{
@@ -255,21 +264,29 @@ h3{
 }
 p{
     color: white;
+    font-weight:bolder;
+    cursor: pointer;
+    font-size: 20px;
+}
+p:hover{
+    transform: scale(1.2);
 }
 .meals{
-    display: flex;
-    flex-direction: column;
-    margin-top: 90px;
+    margin-top: 50px;
+    height: 560px;
+    overflow: scroll;
 }
 .meals img{
-    
-    width: 150px;
+    overflow: scroll;
+    width: 100px;
     border-radius: 100%;
-}
-.meals button{
-    margin-top: 20px;
+    opacity: 0.5;
     cursor: pointer;
-    width: 150px;
-    border-radius: 50px;
-
+}
+.meals img:hover{
+    opacity: 1;
+}
+.todo-input,
+.input-food{
+    padding: 8px;
 }
